# slack-archive-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  LICENSE  PLAN-bd.md  README.md  SlackArchiveToolkit.code-workspace  channels.json  manifest  pyproject.toml  slackbackup  work-log.md
.beads/: .gitignore  issues.jsonl  metadata.json
docs/: CONTEXT.md  DESIGN copy.md  DESIGN-export.md  DESIGN-files.md  DESIGN.md  OPERATIONS.md  f3-culture.md  f3-it-infrastructure-augmentation-2026-06-30.json  f3-it-infrastructure-augmentation-2026-06-30.md  fng-getting-started-prompt.md  llm-digest2-idea.md  llm-export-suggestion.md  llm-leadership-improvement.md  newsletter-prompt.md  slack-ingestion.md
docs/adr/: 0001-digest-v2-additive-evidence.md  0002-digest-v3-condensation.md  0003-mentions-index-deterministic-identity.md
docs/framework/: README.md  (+2 more)
scripts/: bd-run-beads.py  bd-run-beads.sh  build-file-index.sh  fetch-files.sh  install-slackdump.sh  nightly-backup-digest.sh  preflight-auth.sh  search-messages.sh  test_bd_run_beads.sh  test_build_file_index.sh  test_fetch_files.sh  test_preflight_auth.sh  test_search_messages.sh
slackdumpbot/: concept.md
tests/: test_backup_logic.py  test_backup_logic_list.py  test_catalog.py  test_catalog_logic.py  test_channel_digest_logic.py  test_channel_logic.py  test_cli_skeleton.py  test_export_cli.py  test_export_digest_logic.py  test_export_logic.py  test_export_logic_list.py  test_export_users_logic.py  test_f3_handler.py  test_files_logic.py  test_search_logic.py  test_slackdump.py  test_workspace_logic.py
(+51 files in other folders)
